<resources>
    <string name="app_name">Inicio</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo_login">Error haciendo login</string>
    <string name="msg_fallo_registro">Error registrando usuario</string>
    <string name="title_activity_central">Central</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_estado">Estado</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_nombreEstado">Nombre del Estado</string>
    <string name="msg_pais">País</string>
    <string name="msg_capital">Capital</string>
    <string name="msg_poblacion">Población</string>
    <string name="msg_coordernadas">Coordernadas</string>

    <string name="estadoAdded">Estado agregado</string>
    <string name="noData">Faltan datos</string>
    <string name="bt_agregar">Agregar estado</string>
    <string name="bt_actualizar">Actualizar estado</string>
    <string name="estadoUpdated">Estado Actualizado</string>
    <string name="delete">Elimina estado</string>
    <string name="seguroBorrar">"¿Está seguro de eliminar "</string>
    <string name="si">Si</string>
    <string name="no">No</string>
</resources>