<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.estado.AddEstadoFragment" >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etNombreEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_nombreEstado"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_pais"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etCapital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_capital"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etPoblacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_poblacion"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etCoordenadas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_coordernadas"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_agregar" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>